Remove success message section and update footer with PayNow badge

--- a/index.html
+++ b/index.html
@@ -220,21 +220,6 @@
         </div>
     </header>
 
-    <!-- Success Message Section -->
-    <section class="section success-message-section" style="padding: 80px 100px; background: linear-gradient(135deg, #38e07b 0%, #22c55e 100%); border: 3px solid #38e07b; box-shadow: 0 10px 30px rgba(56, 231, 123, 0.3); margin: 40px 0;">
-        <div class="container" style="max-width: 800px; margin: 0 auto; text-align: center;">
-            <div class="success-message-card" style="display: inline-block; background: rgba(255, 255, 255, 0.95); padding: 40px; border-radius: 20px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); border: 2px solid #38e07b;">
-                <div class="message-content">
-                    <div class="message-icon" style="font-size: 64px; margin-bottom: 20px; color: #38e07b;">✅</div>
-                    <div class="message-text">
-                        <span class="message-title" style="display: block; font-size: 28px; font-weight: 700; color: #191A23; margin-bottom: 16px;">Success!</span>
-                        <span class="message-detail" style="display: block; font-size: 18px; color: #666; line-height: 1.6; max-width: 600px; margin: 0 auto;">Your loan has been successfully Listed in the marketplace awaiting funding from members.</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Stats Section -->
     <section class="section stats-section" style="background-color: black; color: white;">
         <div class="container">
@@ -862,6 +847,11 @@ For Lenders: We provide a vital safety net. If a lender needs their funds back e
                     <input type="email" placeholder="Your email address" required>
                     <button type="submit">Subscribe</button>
                 </form>
+                <div style="margin-top: 20px;">
+                    <a href="#" style="display: inline-block;">
+                        <img src="images/Paynow Badge-vector-hires DARK.svg" alt="PayNow" style="height: 80px; width: auto;">
+                    </a>
+                </div>
             </div>
 
             <div class="footer-column">
