Update footer to use PayNow LIGHT badge for better visibility

--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@ For Lenders: We provide a vital safety net. If a lender needs their funds back e
                 </form>
                 <div style="margin-top: 20px;">
                     <a href="#" style="display: inline-block;">
-                        <img src="images/Paynow Badge-vector-hires DARK.svg" alt="PayNow" style="height: 80px; width: auto;">
+                        <img src="images/Paynow Badge-vector-hires LIGHT.svg" alt="PayNow" style="height: 80px; width: auto;">
                     </a>
                 </div>
             </div>
