Add 'Payment Method' heading above PayNow badge in footer

--- a/index.html
+++ b/index.html
@@ -847,6 +847,7 @@ For Lenders: We provide a vital safety net. If a lender needs their funds back e
                     <input type="email" placeholder="Your email address" required>
                     <button type="submit">Subscribe</button>
                 </form>
+                <h4>Payment Method</h4>
                 <div style="margin-top: 20px;">
                     <a href="#" style="display: inline-block;">
                         <img src="images/Paynow Badge-vector-hires LIGHT.svg" alt="PayNow" style="height: 120px; width: auto;">
