--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@ For Lenders: We provide a vital safety net. If a lender needs their funds back e
             <div class="footer-column" id="contact">
                 <h4>Contact Us</h4>
                 <div class="footer-contact-info">
-                    <p><i class="fas fa-envelope"></i> info@zimcrowd.com</p>
+                    <p><i class="fas fa-envelope"></i> support@zimcrowd.co.zw</p>
                     <p><i class="fas fa-phone"></i> +263710467317</p>
                     <p><i class="fas fa-map-marker-alt"></i> Harare, Zimbabwe</p>
                 </div>
