Add compliance@zimcrowd.com and support@zimcrowd.com to footer contact information

--- a/index.html
+++ b/index.html
@@ -886,6 +886,8 @@ For Lenders: We provide a vital safety net. If a lender needs their funds back e
                 <h4>Contact Us</h4>
                 <div class="footer-contact-info">
                     <p><i class="fas fa-envelope"></i> support@zimcrowd.co.zw</p>
+                    <p><i class="fas fa-envelope"></i> compliance@zimcrowd.com</p>
+                    <p><i class="fas fa-envelope"></i> support@zimcrowd.com</p>
                     <p><i class="fas fa-phone"></i> +263710467317</p>
                     <p><i class="fas fa-map-marker-alt"></i> Harare, Zimbabwe</p>
                 </div>
