Update all HTML files to use production backend URL

--- a/reset-password.html
+++ b/reset-password.html
@@ -354,8 +354,12 @@
             resetSpinner.style.display = 'inline-block';
 
             try {
-                // Make API call to backend
-                const response = await fetch('http://localhost:5003/api/auth/reset-password', {
+                // Make API call to backend (auto-detect environment)
+                const API_URL = window.location.hostname === 'localhost' 
+                    ? 'http://localhost:5003'
+                    : 'https://zimcrowd-backend-qsvfl2nqu-jojola.vercel.app';
+                
+                const response = await fetch(`${API_URL}/api/auth/reset-password`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
