--- a/api-test.html
+++ b/api-test.html
@@ -43,7 +43,9 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:5003/api';
+        const API_BASE = window.location.hostname === 'localhost' 
+            ? 'http://localhost:5003/api'
+            : 'https://zimcrowd-backend-qsvfl2nqu-jojola.vercel.app/api';
 
         function showResult(elementId, result, isSuccess = true) {
             const element = document.getElementById(elementId);
