--- a/signup.html
+++ b/signup.html
@@ -722,8 +722,12 @@
             submitBtn.disabled = true;
 
             try {
-                // Make API call to backend
-                const response = await fetch('http://localhost:5003/api/auth/register', {
+                // Make API call to backend (auto-detect environment)
+                const API_URL = window.location.hostname === 'localhost' 
+                    ? 'http://localhost:5003'
+                    : 'https://zimcrowd-backend-qsvfl2nqu-jojola.vercel.app';
+                
+                const response = await fetch(`${API_URL}/api/auth/register`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
