--- a/verify-otp.html
+++ b/verify-otp.html
@@ -716,8 +716,12 @@
                 verifySpinner.style.display = 'inline-block';
 
                 try {
-                    // Make API call to backend
-                    const response = await fetch('http://localhost:5003/api/auth/verify-otp', {
+                    // Make API call to backend (auto-detect environment)
+                    const API_URL = window.location.hostname === 'localhost' 
+                        ? 'http://localhost:5003'
+                        : 'https://zimcrowd-backend-qsvfl2nqu-jojola.vercel.app';
+                    
+                    const response = await fetch(`${API_URL}/api/auth/verify-otp`, {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
